--- a/loginAndRegister/src/main/resources/application.properties
+++ b/loginAndRegister/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.mvc.view.suffix=.jsp
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/college_management
 spring.datasource.username=root
-spring.datasource.password=massmadhu89850_
+spring.datasource.password=pwd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
